implement csrf protection with gorilla

--- a/views/users/login.gohtml
+++ b/views/users/login.gohtml
@@ -16,7 +16,8 @@
 
 {{define "loginForm"}}
 <form action="/login" method="POST">
-    <div class="form-group">
+   {{csrfField}}
+   <div class="form-group">
     <label for="email">Email address</label>
     <input type="email" name="email" class="form-control" id="email" 
       id="email" placeholder="Email">
